# rust-exmaple

arc-swap-live/: Cargo.toml
arc-swap-live/src/: lib.rs  main.rs
axum-live/: Cargo.toml
axum-live/examples/: basic.rs
axum-live/static/: hello.js
axum-ws-live/: Cargo.toml
axum-ws-live/ws-server/: Cargo.toml
axum-ws-live/ws-server/src/: lib.rs  main.rs
axum-ws-live/ws-shared/src/: lib.rs
dioxus-live/: Cargo.toml  todos_dioxus.json
dioxus-live/src/: lib.rs  main.rs  models.rs  style.css
dioxus-live/src/components/: todo_filter.rs  todo_input.rs  todo_item.rs
dioxus-live/src/platform/: desktop.rs  mod.rs  web.rs
prost-live/: Cargo.toml  build.rs  person.proto
prost-live/examples/: person.rs
prost-live/src/pb/: mod.rs  person.rs
tonic-live/: Cargo.toml  abi.proto  build.rs
tonic-live/examples/: client.rs  server.rs
tonic-live/src/: client.rs  server.rs
tonic-live/src/pb/: abi.rs  mod.rs
